# centaur-lab

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.bfts-executor  Justfile  LICENSE  README.md  centaur_sdk  pyproject.toml  ruff.toml  values.local.yaml  values.org.yaml
.github/workflows/: .trigger  bfts-executor.yml  ci-sanity-check.yml  overlay.yml
bfts/: config.py  expand.py  export.py  select.py
centaur_lab/: brief.py  integration_db.py  metrics.py  paper_document.py
cloudflared/: Justfile  README.md  com.local-labs.centaur-tunnel.plist  config.yml
clusters/centaur-lab/: README.md
db/: README.md  centaur_db.py  pyproject.toml
db/notebooks/: explore.ipynb  papers.ipynb  slack.ipynb
docs/: TODO.md  agent-sandbox-in-centaur.md  bfts-batch-iron-proxy.md  bfts-deployment-architecture.md  bfts-phase5-orchestration.md  centaur-science.md  gh.md  overlay-db-migrations.md  overlay-image-deploys.md  review.md
docs/agent-sandbox/: api.md  go-client.md  index.md  python-client.md
docs/centaur/: README.md  architecture.md  brand.md  demo.md  deploying-in-production.md  llms-full.txt  llms.txt  quickstart.md  security.md  what-is-centaur.md
docs/semantic_scholar/: README.md  datasets-api.md  graph-api.md  recommendations-api.md  tutorial.md
docs/superpowers/: bfts-research-suggestion.md
infra/: README.md
infra/argocd/: application.yaml
overlay/: .dockerignore  Dockerfile  Dockerfile.bfts-executor  Justfile
overlay/centaur_lab/: brief.py  integration_db.py  metrics.py  paper_archive.py  paper_document.py  paper_fulltext.py  paper_models.py  testing.py
overlay/shared/: metrics.py  paper_document.py
overlay/tools/bfts_executor/: __init__.py  client.py  network_policy.py  pyproject.toml
overlay/tools/bfts_executor/tests/: conftest.py  test_collect_artifacts.py  test_create_sandbox_body.py  test_exec_python_happy.py  test_exec_python_timeout.py  test_execution_result_shape.py  test_kubernetes_api_calls.py  test_network_policy.py  test_sandbox_lifecycle.py  test_write_file_quoting.py
overlay/tools/bfts_vlm/: client.py  pyproject.toml
overlay/tools/bfts_vlm/tests/: test_vlm_contract.py
overlay/tools/pdf/: .env.example  cli.py  client.py  pyproject.toml  utils.py
overlay/tools/pdf/fetch/: http.py
overlay/tools/pdf/parse/: markdown.py
overlay/tools/pdf/tests/: test_utils.py
overlay/tools/personas/lab-eng/: PROMPT.md  pyproject.toml
overlay/tools/semantic_scholar/: __init__.py  cli.py  client.py  pdf_fetch.py  pdf_parse.py  projections.py  pyproject.toml  utils.py
overlay/tools/semantic_scholar/projections/: brief.py  fulltext.py  paper.py
overlay/tools/semantic_scholar/tests/: _helpers.py  conftest.py  test_api_key.py  test_archive_paper.py  test_cli.py  test_pdf_fetch.py  test_projections.py  test_request_async.py  test_research_brief.py  test_search.py  test_search_hybrid.py  test_utils.py
overlay/tools/semantic_scholar/tests/integration/: conftest.py  test_research_brief_integration.py
overlay/workflows/: _bfts_config.py  _bfts_expand.py  _bfts_export.py  _bfts_llm.py  _bfts_metric.py  _bfts_prompts.py  _bfts_select.py  _bfts_state.py  _metrics.py  _paper_document.py  archive_papers.py  bfts_expand_one.py  bfts_reflection_nightly.py  bfts_root.py  bfts_tree.py  gather_citations.py  ideation.py  pyproject.toml  research_brief.py  save_papers.py
overlay/workflows/tests/: _fakes.py  _helpers.py  _mocks.py  conftest.py  test_archive_papers.py  test_bfts_config.py  test_bfts_expand.py  test_bfts_expand_one.py  test_bfts_expand_vlm.py  test_bfts_export.py  test_bfts_hyperparams.py  test_bfts_llm.py  test_bfts_metric.py  test_bfts_prompts.py  test_bfts_reflection_nightly.py  test_bfts_root_handler.py  test_bfts_select.py  test_bfts_state.py  test_bfts_tree_handler.py  test_gather_citations.py  test_ideation.py  test_paper_archive.py  test_paper_document.py  test_research_brief.py  test_save_papers.py
overlay/workflows/tests/integration/: conftest.py  test_bfts_state.py  test_research_brief_integration.py  test_save_papers_integration.py
scripts/: sync-sdk  sync_sdk.py
services/sandbox/: SYSTEM_PROMPT.md  call-workflow-run.sh
tests/: test_bfts_llm_proxy.py  test_bfts_research.py  test_bfts_root_lifecycle.py  test_bfts_root_slack.py  test_bfts_slack_progress.py  test_bfts_tree.py  test_brief_compact.py  test_ideation_persist.py  test_ideation_schema.py  test_literature_query.py  test_overlay_invariants.py  test_research_config.py  test_slack_stream.py  test_smoke.py
tests-old/pdf/: test_utils.py
tests-old/workflows/: test_archive_papers.py  test_research_brief.py  test_save_papers.py
tools/bfts_executor/: client.py  models.py  network_policy.py  pyproject.toml
tools/bfts_executor/tests/: test_collect_artifacts.py  test_kubernetes_api_calls.py  test_network_policy.py  test_sandbox_lifecycle.py  test_write_file_quoting.py
tools/bfts_runner/: client.py  pyproject.toml
tools/bfts_runner/slack/: format.py  post.py  progress.py  stream.py
tools/bfts_runner/tests/: test_entrypoint.py  test_slack.py
tools/bfts_vlm/: __init__.py  client.py  pyproject.toml
tools/pdf/: cli.py  client.py  pyproject.toml
tools/semantic_scholar/: cli.py  client.py  pyproject.toml  utils.py
tools/semantic_scholar/projections/: __init__.py  archive.py  brief.py  paper.py
tools/semantic_scholar/tests/: test_api_key.py  test_cli.py  test_request_async.py  test_research_brief.py  test_search.py
tools/semantic_scholar/tests/integration/: conftest.py  test_research_brief_integration.py
workflows/: __init__.py  _bfts_config.py  _bfts_expand.py  _bfts_export.py  _bfts_llm.py  archive_papers.py  bfts_expand_one.py  bfts_reflection_nightly.py  bfts_research.py  bfts_root.py  bfts_tree.py  gather_citations.py  ideation.py  research_brief.py  save_papers.py  search_and_archive_papers.py
workflows/tests/: test_bfts_config.py  test_bfts_expand.py  test_bfts_expand_one.py  test_bfts_export.py  test_bfts_hyperparams.py  test_bfts_llm.py  test_bfts_prompts.py  test_bfts_reflection_nightly.py  (+8 more)
(+134 files in other folders)
