[project]
name = "centaur-lab-overlay"
version = "0.1.0"
description = "centaur-lab organization overlay for Centaur (academic research domain)"
requires-python = ">=3.11"
license = "Apache-2.0 OR MIT"

# Tool runtime deps live in ``tools/<name>/pyproject.toml`` — that's the
# file upstream's API entrypoint (.centaur/services/api/entrypoint.sh)
# scans on pod startup to ``uv pip install`` every overlay tool's deps
# before launching uvicorn. The workspace glob below makes the same
# per-tool ``[project].dependencies`` blocks discoverable to uv, so
# ``uv sync --all-packages`` aggregates them into the dev ``.venv`` —
# byte-for-byte the same set the API pod ends up with, with no
# duplicated dep lists in this file to drift.
#
# Each tool opts out of being built as a wheel
# (``[tool.uv].package = false`` in its own pyproject) — the repo is a
# Docker image build context, not a Python distribution.
#
# ``centaur_sdk`` is intentionally not declared anywhere: upstream's
# ``centaur_sdk/pyproject.toml`` declares ``packages = ["."]`` which
# flattens module files into the wheel root, so a normal ``pip install``
# / ``uv add`` does not expose ``from centaur_sdk import …``. We expose
# the SDK via a ``centaur_sdk`` → ``.centaur/centaur_sdk`` symlink at
# the repo root, which lets every Python entrypoint that already has
# the repo root on ``sys.path`` (pytest, ``uv run python -m …``, IDEs,
# mypy / pyright) resolve the package directly. Bumping the
# ``.centaur`` submodule pin updates the SDK in lockstep with the API.
# Note: the SDK declares its own runtime deps (currently ``rich``);
# those land in the ``.venv`` via ``rich`` being a per-tool dep, which
# matches what the API pod sees too.
[tool.uv.workspace]
members = ["tools/*"]

# This repo is a Docker image build context, not a publishable Python
# distribution — tell uv not to build the overlay itself.
[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Repo root on the path so ``from tools.semantic_scholar.client import …``
# and ``from workflows.research_brief import …`` resolve as namespace
# packages — byte-identical to how the API pod sets up TOOL_DIRS /
# WORKFLOW_DIRS at startup. ``centaur_sdk`` resolves through the
# repo-root symlink (see the comment near the top of this file), so we
# don't need ``.centaur`` on the path here anymore.
pythonpath = ["."]
asyncio_mode = "strict"

# ruff config lives in ./ruff.toml so it can also be used by per-tool
# `uvx ruff check .` invocations from inside `tools/<name>/` — keeping
# a duplicate `[tool.ruff]` block here would silently win over ruff.toml
# in unrelated subdirs.
