[project]
name = "centaur-scientist-overlay"
version = "0.1.0"
description = "centaur-scientist organization overlay for Centaur (BFTS / AI-Scientist-v2 driver workflows, execution sandbox tooling, and academic-research helpers)"
requires-python = ">=3.11"
license = "Apache-2.0 OR MIT"

# Shape B: the root only declares a uv workspace; ``uv sync
# --all-packages`` walks every member's ``[project].dependencies``
# into the dev ``.venv``. We do NOT re-list each tool in a root
# ``[project].dependencies`` or ``[tool.uv.sources]`` table — the
# workspace glob is the single source of truth for membership, and
# the per-tool pyproject is the single source of truth for what each
# tool needs at runtime.
#
# Why this matters: a per-tool ``pyproject.toml`` is non-negotiable
# regardless of root-pyproject shape. Two upstream-owned things
# require it:
#
#   1. API pod runtime install — ``.centaur/services/api/entrypoint.sh``
#      walks ``TOOL_DIRS`` at pod startup and ``uv pip install``s
#      each tool's ``[project].dependencies``. No per-tool
#      pyproject → tool deps don't land in the pod venv → tool code
#      ``ImportError``s at request time.
#   2. Tool discovery + secret injection — ``tool_manager`` reads
#      ``[tool.centaur].secrets`` / ``optional_secrets`` from each
#      tool's pyproject to decide whether to expose the tool to the
#      agent and which env vars iron-proxy should inject.
#
# Workflows + ``packages/bfts_sdk`` are NOT scanned by
# ``entrypoint.sh``. The invariant that keeps prod working is that
# every dep imported by overlay code outside ``tools/`` is also
# declared by some tool's ``[project].dependencies`` (today
# ``bfts_sdk`` needs only ``asyncpg + httpx``, both already declared
# by ``tools/semantic_scholar/`` and ``tools/bfts_vlm/``). This is a
# code-review invariant, not a CI string-equality check — the latter
# would only catch one kind of drift while masking the real problem,
# which is "did we add a new transitive import without giving it a
# tool home?".
#
# ``packages/bfts_sdk`` is a workspace member but does NOT need a
# ``[tool.uv.sources]`` redirect because Shape B never names it as
# a root ``[project].dependencies`` entry — the ``members`` glob is
# the only thing referencing it, and that already binds it to the
# workspace.
#
# ``centaur_sdk`` is intentionally not declared anywhere as a dep:
# upstream's ``centaur_sdk/pyproject.toml`` declares
# ``packages = ["."]`` which flattens module files into the wheel
# root, so ``pip install`` / ``uv add`` does not expose
# ``from centaur_sdk import …``. We expose the SDK via a
# ``packages/centaur_sdk`` → ``.centaur/centaur_sdk`` symlink (with
# ``packages/`` on ``pythonpath`` below), which lets every dev-side
# Python entrypoint resolve the package directly. The API pod ships
# its own ``/app/centaur_sdk/`` installed as a real venv package, so
# prod never reads the symlink. ``packages/centaur_sdk`` is
# explicitly NOT a workspace member because the upstream pyproject
# there is not opted out of building and would confuse uv.

[tool.uv.workspace]
members = [
    "tools/*",
    "packages/bfts_sdk",
]

# This repo is a Docker image build context, not a publishable Python
# distribution — tell uv not to build the overlay itself.
[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
# Only integration tests live in-tree right now (see
# ``tools/semantic_scholar/tests/integration/`` and
# ``workflows/tests/integration/``); the unit-test suite was moved into
# the gitignored ``tmp/test-old/`` mirror during the centaur_lab → S2
# dispersal and will be reinstated incrementally as projections and
# workflow handlers stabilize. A single ``uv run pytest`` from the
# repo root walks both integration trees.
testpaths = ["tools", "workflows"]
# - Repo root on the path so ``from tools.bfts_executor.client import …``
#   and ``from workflows.bfts_tree import …`` resolve as namespace
#   packages — byte-identical to how the API pod sets up TOOL_DIRS /
#   WORKFLOW_DIRS at startup.
# - ``packages/`` on the path so ``from centaur_sdk import secret``
#   resolves through the ``packages/centaur_sdk`` → ``.centaur/centaur_sdk``
#   symlink during local dev (the API pod has ``centaur_sdk`` installed
#   as a real venv package via its own Dockerfile and ignores the
#   symlink). BFTS callers stay namespaced as
#   ``from packages.bfts_sdk.config import …`` so the same imports
#   resolve in the API pod where TOOL_DIRS already puts the overlay
#   root on ``sys.path``; we don't need a separate ``bfts_sdk``-on-path
#   entry there.
pythonpath = [".", "packages"]
asyncio_mode = "strict"
# ``importlib`` is required because we have multiple sibling
# ``tests/`` packages (one each under ``workflows/`` and
# ``tools/<name>/``) without ``workflows/__init__.py`` or
# ``tools/__init__.py`` — those stay as implicit namespace packages
# so the API pod's runtime ``importlib.import_module("tools.<n>.client")``
# discovery works without us hard-pinning the package roots here.
# Pytest's default ``prepend`` import mode would collide the leaf
# ``tests`` package names across siblings; ``importlib`` mode imports
# each test file under its unique rootdir-relative module path
# (e.g. ``workflows.tests.test_bfts_config``,
# ``tools.bfts_executor.tests.test_collect_artifacts``).
addopts = "--import-mode=importlib"

# ruff config lives in ./ruff.toml so it can also be used by per-tool
# `uvx ruff check .` invocations from inside `tools/<name>/` — keeping
# a duplicate `[tool.ruff]` block here would silently win over ruff.toml
# in unrelated subdirs.
