[project]
name = "overlay-workflows"
description = "Centaur-lab workflows projected into the API pod via WORKFLOW_DIRS."
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "semanticscholar>=0.12.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "strict"
# ``../tools`` is here so the tool packages (``pdf``, ``semantic_scholar``)
# resolve as top-level imports from workflow tests, matching how the
# tool test suites see them. Workflows import ``tools.semantic_scholar.client``
# (via the ``..`` namespace path), which transitively pulls in
# ``semantic_scholar.projections`` and ``pdf.fetch.http`` — those need the
# tool dir on the path to import as top-level packages.
pythonpath = [
    ".",
    "..",
    "../tools",
    "../../.centaur",
]
