[project]
name = "overlay-workflows"
description = "Centaur-lab workflows projected into the API pod via WORKFLOW_DIRS."
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "semanticscholar>=0.12.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "strict"
# ``.`` makes workflow modules importable by their bare name (``import
# save_papers``) so tests track how the API pod loads them via
# WORKFLOW_DIRS. ``../tools`` puts the tool packages (``pdf``,
# ``semantic_scholar``) on the path as top-level imports, matching the
# tool test suites and how the API pod resolves the tool loader's
# bootstrap. ``../../.centaur`` exposes ``centaur_sdk`` for the few
# helpers that import it directly.
pythonpath = [
    ".",
    "../tools",
    "../../.centaur",
]
