[project]
name = "overlay-workflows"
description = "Centaur-lab workflows projected into the API pod via WORKFLOW_DIRS."
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "semanticscholar>=0.12.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "strict"
# ``.`` makes workflow modules importable by their bare name (``import
# save_papers``), matching how the API pod's ``discover_workflow_handlers``
# loads them via ``WORKFLOW_DIRS``. ``..`` is the ``overlay/`` root,
# which puts the ``tools.*`` namespace package on sys.path so workflow
# imports look like ``from tools.semantic_scholar.client import ...``
# — byte-identical to how the API pod resolves tools at runtime.
# ``../../.centaur`` exposes ``centaur_sdk``.
#
# Do NOT add ``../tools`` here; that would expose ``semantic_scholar``
# and ``pdf`` as bare top-level packages, which is a runtime-vs-test
# divergence the API pod does not honour.
pythonpath = [
    ".",
    "..",
    "../../.centaur",
]
