# Single source of truth for the PDF tool's runtime deps. Read by
# upstream's ``tool_manager`` (for discovery + the ``[tool.centaur]``
# block), the API pod's ``entrypoint.sh`` (for ``[project].dependencies``
# install on pod startup), and ``uv`` at the repo root (this directory
# is a workspace member of ``../../pyproject.toml``, so dev/test sees
# the same dep set the API pod sees). See
# ``tools/semantic_scholar/pyproject.toml`` for the longer rationale.
#
# No ``[tool.centaur].secrets`` — every PDF host this tool talks to is
# public, so iron-proxy doesn't need to inject any auth headers.
[project]
name = "pdf"
version = "0.1.0"
description = "Stream PDFs over HTTPS and parse them to Markdown via the pymupdf4llm -> pymupdf -> pypdf fallback chain. Public HTTP only — no auth."
requires-python = ">=3.11"
license = "Apache-2.0 OR MIT"
dependencies = [
    "httpx>=0.27.0",
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.17",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Non-package workspace member — uv contributes our deps to the root
# ``.venv`` without trying to build a wheel for the tool itself.
[tool.uv]
package = false

[tool.centaur]
module = "client.py"
