# Single source of truth for the Semantic Scholar tool's runtime
# deps; same three consumers as the other tools (tool_manager
# registration, entrypoint.sh dep install, workspace ``uv sync``).
# See ``tools/bfts_executor/pyproject.toml`` for the full pattern.
#
# iron-proxy injection: ``[tool.centaur].optional_secrets`` tells the
# firewall to substitute the resolved value for
# ``SEMANTIC_SCHOLAR_API_KEY`` on outbound requests to
# ``api.semanticscholar.org``. ``optional_secrets`` (vs ``secrets``):
# anonymous calls degrade to S2's 1 req/sec unauthenticated rate
# limit but still function — we choose to keep the tool visible to
# the agent and let it backoff rather than hide it when the secret is
# absent.
[project]
name = "semantic-scholar"
description = "Semantic Scholar Graph API client (paper search + bulk metadata + research-brief persistence to Postgres)."
version = "0.1.0"
requires-python = ">=3.11"
license = "Apache-2.0 OR MIT"
dependencies = [
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "tenacity>=8.0.0",
    "typer>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tool manifest, not a publishable wheel — opt out of building so uv
# treats this as a workspace member that only contributes its
# ``[project].dependencies`` to the root ``.venv``.
[tool.uv]
package = false

[tool.centaur]
module = "client.py"
optional_secrets = [
    {type = "http", name = "SEMANTIC_SCHOLAR_API_KEY", match_headers = ["x-api-key"], hosts = ["api.semanticscholar.org"]},
]
