# Single source of truth for the Semantic Scholar tool's runtime
# deps; same three consumers as the other tools (tool_manager
# registration, entrypoint.sh dep install, workspace ``uv sync``).
# See ``tools/bfts_executor/pyproject.toml`` for the full pattern.
#
# iron-proxy injection: ``[tool.centaur].secrets`` tells the firewall
# to substitute the resolved value for ``SEMANTIC_SCHOLAR_API_KEY``
# on outbound requests to ``api.semanticscholar.org``. Declared as
# required (not ``optional_secrets``) so ``tool_manager`` hides the
# tool from the agent when the key is unbound — the BFTS workflows
# (``gather_citations``, ``ideation``) and the research-brief flow
# all rely on bulk S2 calls that would saturate the anonymous
# 1 req/sec rate limit and silently fail mid-run. Aligns with
# upstream centaur-acme's required-secret contract.
[project]
name = "semantic-scholar"
description = "Semantic Scholar Graph API client (paper search + bulk metadata + research-brief persistence to Postgres)."
version = "0.1.0"
requires-python = ">=3.11"
license = "Apache-2.0 OR MIT"
dependencies = [
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "tenacity>=8.0.0",
    "typer>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tool manifest, not a publishable wheel — opt out of building so uv
# treats this as a workspace member that only contributes its
# ``[project].dependencies`` to the root ``.venv``.
[tool.uv]
package = false

[tool.centaur]
module = "client.py"
secrets = [
    {type = "http", name = "SEMANTIC_SCHOLAR_API_KEY", match_headers = ["x-api-key"], hosts = ["api.semanticscholar.org"]},
]
