[project]
name = "bfts_executor"
description = "Drive agent-sandbox Sandbox CRs for BFTS experiment execution"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "kubernetes-asyncio>=29.0.0",
    "aiohttp>=3.9.0",
    "dataclasses-json>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
# ``../..`` is the ``overlay/`` root: it puts the ``tools.*`` namespace
# package on sys.path so test imports look like ``from
# tools.bfts_executor.client import ...`` — byte-identical to how
# the API pod resolves tools at runtime via the ``tools.*`` namespace
# bootstrap in ``.centaur/services/api/api/app.py``. Do NOT add ``..``
# here; that would expose ``bfts_executor`` as a bare top-level
# package, which is a runtime-vs-test divergence the API pod does
# not honour and which previously masked ``ModuleNotFoundError`` bugs
# at deploy time.
pythonpath = [
    "../..",
    "../../../.centaur",
]

[tool.centaur]
module = "client.py"
# No optional_secrets: this tool only talks to the in-cluster Kubernetes
# API (read via the API pod's mounted service account token) and to the
# sandbox-internal HTTP exec endpoint. No external HTTPS, so iron-proxy
# has nothing to substitute.
