[project]
name = "bfts_vlm"
description = "VLM review of BFTS-generated plots"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
# ``../..`` is the ``overlay/`` root: it puts the ``tools.*`` namespace
# package on sys.path so test imports look like ``from
# tools.bfts_vlm.client import ...`` — byte-identical to how the API
# pod resolves tools at runtime via the ``tools.*`` namespace
# bootstrap in ``.centaur/services/api/api/app.py``. Do NOT add ``..``
# here; that would expose ``bfts_vlm`` as a bare top-level package,
# which is a runtime-vs-test divergence the API pod does not honour
# and which previously masked ``ModuleNotFoundError`` bugs at deploy
# time.
pythonpath = [
    "../..",
    "../../../.centaur",
]

[tool.centaur]
module = "client.py"
optional_secrets = [
    {type = "http", name = "ANTHROPIC_API_KEY", match_headers = ["x-api-key"], hosts = ["api.anthropic.com"]},
    {type = "http", name = "OPENAI_API_KEY", match_headers = ["authorization"], hosts = ["api.openai.com"]},
]
