[project]
name = "semantic_scholar"
description = "Search Semantic Scholar, fetch paper metadata, walk the citation graph, and build persisted research briefs (lit-review writeups upserted into company_context_documents)."
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
    "pymupdf4llm>=0.0.17",
    "pypdf>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "asyncpg>=0.30.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = [
    "..",
    "../..",
    "../../../.centaur",
]


[tool.centaur]
module = "client.py"
optional_secrets = [
    {type = "http", name = "SEMANTIC_SCHOLAR_API_KEY", match_headers = ["x-api-key"], hosts = ["api.semanticscholar.org"]},
]
