[project]
name = "semantic_scholar"
description = "Search Semantic Scholar, fetch paper metadata, walk the citation graph, and build persisted research briefs (lit-review writeups upserted into company_context_documents)."
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "semanticscholar>=0.12.0",
    "httpx>=0.27.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    # pymupdf / pymupdf4llm / pypdf are deliberately NOT listed here.
    # The PDF fetch + parse stages live in the sibling ``pdf`` tool;
    # its pyproject.toml owns those deps, and the API pod's startup
    # merges every tool's pyproject into one shared venv (see
    # ``.centaur/services/api/entrypoint.sh``) so the imports inside
    # ``tools.pdf.parse.markdown`` resolve at runtime without us
    # duplicating the dep declarations here.
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "asyncpg>=0.30.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
# ``../..`` is the ``overlay/`` root: it puts the ``tools.*`` namespace
# package on sys.path so test imports look like ``from
# tools.semantic_scholar.client import ...`` — byte-identical to how
# the API pod resolves tools at runtime via the ``tools.*`` namespace
# bootstrap in ``.centaur/services/api/api/app.py``. Do NOT add ``..``
# here; that would expose ``semantic_scholar`` and ``pdf`` as bare
# top-level packages, which is a runtime-vs-test divergence the API
# pod does not honour and which previously masked
# ``ModuleNotFoundError`` bugs at deploy time.
pythonpath = [
    "../..",
    "../../../.centaur",
]


[tool.centaur]
module = "client.py"
optional_secrets = [
    {type = "http", name = "SEMANTIC_SCHOLAR_API_KEY", match_headers = ["x-api-key"], hosts = ["api.semanticscholar.org"]},
]
